ComposicionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\oscar\Desktop\Nueva carpeta\Composicion.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ComposicionParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NAME_PARAM=1, TITLE_PARAM=2, H1_PARAM=3, H2_PARAM=4, H3_PARAM=5, BOLD_PARAM=6, 
		ITALIC_PARAM=7, UNDERLINE_PARAM=8, PARA_PARAM=9, REF_PARAM=10, LIST_PARAM=11, 
		TABLE_PARAM=12, INIT_COMMAND=13, LPAR=14, RPAR=15, BEGIN=16, END=17, DOC_NAME=18, 
		DOC_TITLE=19, H1=20, H2=21, H3=22, BOLD=23, ITALIC=24, UNDERLINE=25, PARA=26, 
		BIBLIOGRAPHY=27, LIST=28, TABLE=29, URL=30, TEXT=31, WORD=32, DIV=33, 
		ENUM_LIST=34, SP=35, EOL=36;
	public const int
		RULE_textComp = 0, RULE_document = 1, RULE_command = 2, RULE_name = 3, 
		RULE_title = 4, RULE_h1 = 5, RULE_h2 = 6, RULE_h3 = 7, RULE_bold = 8, 
		RULE_italic = 9, RULE_underline = 10, RULE_para = 11, RULE_ref = 12, RULE_list = 13, 
		RULE_table = 14, RULE_content = 15, RULE_refItem = 16, RULE_listItem = 17, 
		RULE_tableRow = 18, RULE_tableCell = 19;
	public static readonly string[] ruleNames = {
		"textComp", "document", "command", "name", "title", "h1", "h2", "h3", 
		"bold", "italic", "underline", "para", "ref", "list", "table", "content", 
		"refItem", "listItem", "tableRow", "tableCell"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'/'", "'('", "')'", "'begin'", "'end'", "'name'", "'title'", "'h1'", 
		"'h2'", "'h3'", "'b'", "'i'", "'u'", "'p'", "'ref'", "'list'", "'table'", 
		null, null, null, "'|'", "'*'", "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NAME_PARAM", "TITLE_PARAM", "H1_PARAM", "H2_PARAM", "H3_PARAM", 
		"BOLD_PARAM", "ITALIC_PARAM", "UNDERLINE_PARAM", "PARA_PARAM", "REF_PARAM", 
		"LIST_PARAM", "TABLE_PARAM", "INIT_COMMAND", "LPAR", "RPAR", "BEGIN", 
		"END", "DOC_NAME", "DOC_TITLE", "H1", "H2", "H3", "BOLD", "ITALIC", "UNDERLINE", 
		"PARA", "BIBLIOGRAPHY", "LIST", "TABLE", "URL", "TEXT", "WORD", "DIV", 
		"ENUM_LIST", "SP", "EOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Composicion.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ComposicionParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ComposicionParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ComposicionParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TextCompContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DocumentContext document() {
			return GetRuleContext<DocumentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ComposicionParser.Eof, 0); }
		public TextCompContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textComp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextComp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextCompContext textComp() {
		TextCompContext _localctx = new TextCompContext(Context, State);
		EnterRule(_localctx, 0, RULE_textComp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			document();
			State = 41;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 2, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 43;
				command();
				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INIT_COMMAND );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TitleContext title() {
			return GetRuleContext<TitleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public H1Context h1() {
			return GetRuleContext<H1Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public H2Context h2() {
			return GetRuleContext<H2Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public H3Context h3() {
			return GetRuleContext<H3Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoldContext bold() {
			return GetRuleContext<BoldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItalicContext italic() {
			return GetRuleContext<ItalicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnderlineContext underline() {
			return GetRuleContext<UnderlineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParaContext para() {
			return GetRuleContext<ParaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RefContext @ref() {
			return GetRuleContext<RefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 4, RULE_command);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				name();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				title();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				h1();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 51;
				h2();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 52;
				h3();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 53;
				bold();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 54;
				italic();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 55;
				underline();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 56;
				para();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 57;
				@ref();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 58;
				list();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 59;
				table();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NAME_PARAM() { return GetTokens(ComposicionParser.NAME_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME_PARAM(int i) {
			return GetToken(ComposicionParser.NAME_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(ComposicionParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(Context, State);
		EnterRule(_localctx, 6, RULE_name);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(INIT_COMMAND);
			State = 63;
			Match(BEGIN);
			State = 64;
			Match(NAME_PARAM);
			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 65;
				Match(SP);
				}
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 71;
			Match(TEXT);
			State = 72;
			Match(INIT_COMMAND);
			State = 73;
			Match(END);
			State = 74;
			Match(NAME_PARAM);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 75;
				Match(SP);
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TitleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TITLE_PARAM() { return GetTokens(ComposicionParser.TITLE_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TITLE_PARAM(int i) {
			return GetToken(ComposicionParser.TITLE_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public TitleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_title; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTitle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TitleContext title() {
		TitleContext _localctx = new TitleContext(Context, State);
		EnterRule(_localctx, 8, RULE_title);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(INIT_COMMAND);
			State = 82;
			Match(BEGIN);
			State = 83;
			Match(TITLE_PARAM);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 84;
				Match(SP);
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			content();
			State = 91;
			Match(INIT_COMMAND);
			State = 92;
			Match(END);
			State = 93;
			Match(TITLE_PARAM);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 94;
				Match(SP);
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class H1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H1_PARAM() { return GetTokens(ComposicionParser.H1_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H1_PARAM(int i) {
			return GetToken(ComposicionParser.H1_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public H1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_h1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitH1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public H1Context h1() {
		H1Context _localctx = new H1Context(Context, State);
		EnterRule(_localctx, 10, RULE_h1);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(INIT_COMMAND);
			State = 101;
			Match(BEGIN);
			State = 102;
			Match(H1_PARAM);
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 103;
				Match(SP);
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 109;
			content();
			State = 110;
			Match(INIT_COMMAND);
			State = 111;
			Match(END);
			State = 112;
			Match(H1_PARAM);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 113;
				Match(SP);
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class H2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H2_PARAM() { return GetTokens(ComposicionParser.H2_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H2_PARAM(int i) {
			return GetToken(ComposicionParser.H2_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public H2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_h2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitH2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public H2Context h2() {
		H2Context _localctx = new H2Context(Context, State);
		EnterRule(_localctx, 12, RULE_h2);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(INIT_COMMAND);
			State = 120;
			Match(BEGIN);
			State = 121;
			Match(H2_PARAM);
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 122;
				Match(SP);
				}
				}
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 128;
			content();
			State = 129;
			Match(INIT_COMMAND);
			State = 130;
			Match(END);
			State = 131;
			Match(H2_PARAM);
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 132;
				Match(SP);
				}
				}
				State = 137;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class H3Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H3_PARAM() { return GetTokens(ComposicionParser.H3_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H3_PARAM(int i) {
			return GetToken(ComposicionParser.H3_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public H3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_h3; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitH3(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public H3Context h3() {
		H3Context _localctx = new H3Context(Context, State);
		EnterRule(_localctx, 14, RULE_h3);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			Match(INIT_COMMAND);
			State = 139;
			Match(BEGIN);
			State = 140;
			Match(H3_PARAM);
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 141;
				Match(SP);
				}
				}
				State = 146;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 147;
			content();
			State = 148;
			Match(INIT_COMMAND);
			State = 149;
			Match(END);
			State = 150;
			Match(H3_PARAM);
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SP) {
				{
				{
				State = 151;
				Match(SP);
				}
				}
				State = 156;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INIT_COMMAND() { return GetTokens(ComposicionParser.INIT_COMMAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INIT_COMMAND(int i) {
			return GetToken(ComposicionParser.INIT_COMMAND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN() { return GetToken(ComposicionParser.BEGIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BOLD_PARAM() { return GetTokens(ComposicionParser.BOLD_PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOLD_PARAM(int i) {
			return GetToken(ComposicionParser.BOLD_PARAM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(ComposicionParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SP() { return GetTokens(ComposicionParser.SP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP(int i) {
			return GetToken(ComposicionParser.SP, i);
		}
		public BoldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bold; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IComposicionVisitor<TResult> typedVisitor = visitor as IComposicionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBold(this);
			else return visitor.VisitChildren(this);
		}
	}
